js tic tac toe thing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <!-- All player classes to be defined here -->
 
         <script type="text/javascript" src="PlayerSteve.class.js"></script>
+        <script type="text/javascript" src="PlayerGillian.class.js"></script>
 
         <!-- End all player classes -->
 
@@ -21,7 +22,7 @@
             var players = [
                 DefaultPlayer,
                 Steve,
-                DefaultPlayer,
+                Gillian,
                 DefaultPlayer,
                 DefaultPlayer,
                 DefaultPlayer,
